src/scss/_cim.scss
/* ... */
#panel-area > .panel.visible {
    display: flex;
    flex-direction: column;
}

/* Hide game content when a panel is open */
div.cim-container.panel-open > .control-wrapper,
div.cim-container.panel-open > .flag-container,
div.cim-container.panel-open > .stats,
div.cim-container.panel-open > .selectors,
div.cim-container.panel-open > .mode-toggle-container {
    display: none;
}

div.menu-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

div.hamburger {
    display: none;
    font-size: 3rem;
    position: absolute;
    top: 0;
    right: 0;
    margin-right: 1rem;
    margin-top: 0.5rem;

    @media only screen and (max-width: 768px) {
        display: block;
    }
}

div.expansion-container {
    display: flex;
    position: absolute;
    top: 0;
    right: 0;
    flex-direction: row;
    justify-content: space-around;
    width: min(350px, 28vw);
    margin-right: 3rem;
    margin-top: 1rem;

    @media only screen and (max-width: 768px) {
        max-width: 400px;
        display: none;
    }
}

div.menu-spacer {
    display: none;
}

div.menu-container.visible > div.menu-spacer {
    flex-grow: 0;
    max-width: 0;
    display: block;
}

div.menu-container.visible > div.expansion-container {
    display: flex;
    position: static;
    flex-grow: 1;
}

div.menu-container.visible > div.hamburger {
    position: static;
    flex-grow: 0;
}

div.cim {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-around;
    width: 100%
}

/* Flags */

div.flag-spacer {
    display: none;
    flex-grow: 1;
    width: 100%;
}

div.flag-container.flags-expanded > div.flag-spacer {
    @media only screen and (min-width: 768px) {
        display: block;
    }
}

div.flag-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
    flex-grow: 2;
}

div.chord-notes-container {
    color: #000;
    font-weight: bold;
    display: none;
    justify-content: space-around;
    align-items: center;
    width: min(100%, 10em);
    height: min(10rem, 100%);

    @media only screen and (min-width: 768px) {
        height: min(10rem, calc(100% - 1em));
    }
}

div.note-wrapper {
    width: 2em;
    height: 2em;
    display: flex;
    align-items: center;
    justify-content: center;
    user-select: none;
    position: relative;

    div.note {
        width: 100%;
        height: 100%;
        background-color: #333;
        opacity: 0.95;
    }

    div.note-text {
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        right: 0;
        display: none;
        color: $fg-color-dark;
        justify-content: space-around;
        align-items: center;
        z-index: 10;
        font-size: 1.2em;
    }
}

div.chord-notes-container > div.note-wrapper {
    // This makes the notes appear diagonal, from bottom left to top right
    &:nth-child(1) {
        align-self: flex-end;
    }

    &:nth-child(2) {
        align-self: center;
    }

    &:nth-child(3) {
        align-self: flex-start;
    }
}

div.use-letters div.note-wrapper div.note-text {
    display: flex;
}


div.flag-container.chord-notes div.chord-notes-container {
    display: flex;
    flex-direction: row;
}

/* Controls */

div.control-wrapper {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    flex-grow: 0;
    padding: 0.5rem;
    padding-top: 1rem;
}

div.control-wrapper > div.hamburger {
    flex-grow: 0;
    font-size: 3rem;
    margin-left: 0.5rem;
}

div.control-container {
    display: flex;
    flex-grow: 1;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
}


div.controls {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
}

div.controls a i {
    font-size: 5rem;
    margin-right: 0.25em;
    margin-left: 0.25em;
}

body.colorscheme-dark div.controls i.fa {
    color: #abd1f2;
}

body.colorscheme-light div.controls i.fa {
    color: #0077be;
}

div.controls a.deactivated i.fa {
    color: #0077be50;
}

div.stats {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    margin-top: 1.5rem;
    flex-grow: 0;
}

div.stats div {
    margin-right: 0.5em;
    margin-left: 0.5em;
}

div.emoji-container {
    font-size: 3rem;
}

div.stats i.fa {
    font-size: 2rem;
}

div.selectors {
    display: flex;
    justify-content: center;
    margin-top: 2rem;
    margin-bottom: 1rem;
    max-height: 5vh; // Fallback
    max-height: 5dvh;
}

select.selector {
    margin-left: 2em;
    margin-right: 2em;
}

body.colorscheme-light div.stats.done.perfect span#stats-divider,
body.colorscheme-light div.stats.done.perfect span#stats-correct,
body.colorscheme-light div.stats.done span#stats-total {
    color: green;
}

body.colorscheme-dark div.stats.done.perfect span#stats-divider,
body.colorscheme-dark div.stats.done.perfect span#stats-correct,
body.colorscheme-dark div.stats.done span#stats-total {
    color: #00bf00;
}

div.stats-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-left: 0px !important;
    margin-right: 0px !important;
    padding: 0px;
}

div.stats-display {
    font-size: 2em;
    font-weight: bold;
    text-align: center;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    @media only screen and (max-width: 768px) {
        font-size: 1.2em;
        margin-left: 0.2em;
        margin-right: 0.2em;
    }
}

div.stats-display#sn-stats-display {
    display: none;

    font-size: 0.9em;

    &.visible {
        display: flex;
    }
}

div.stats-display span.stats-percent {
    font-size: 0.5em;
}
/* ... */

